# product-intelligence-system

./: .gitignore  README.md  docker-compose.yml  env.example
docs/: ARCHITECTURE.md  (+3 more)
services/data-pipeline/: Dockerfile  pyproject.toml  requirements.txt
services/data-pipeline/config/: pipeline.yaml.example
services/data-pipeline/src/: __init__.py  config.py  main.py
services/data-pipeline/src/api/: __init__.py  routes.py  schemas.py  stage_routes.py
services/data-pipeline/src/clients/: __init__.py  elasticsearch_client.py  ollama_client.py  postgres_client.py  qdrant_client.py  redis_client.py
services/data-pipeline/src/models/: __init__.py  chunk.py  enums.py  job.py  product.py
services/data-pipeline/src/pipeline/: __init__.py  checkpoint.py  config.py  job_manager.py  job_queue.py  runner.py
services/data-pipeline/src/stages/: __init__.py  base.py  clean.py  download_html.py  embed.py  extract.py  html_to_markdown.py  llm_extract.py  load_elasticsearch.py  load_postgres.py  load_qdrant.py
services/data-pipeline/src/utils/: __init__.py  retry.py
services/multi-agents/: Dockerfile  pyproject.toml  pytest.ini
services/multi-agents/src/: __init__.py  cache.py  conversation.py  main.py
services/multi-agents/src/agents/: __init__.py  analysis_agent.py  attribute_agent.py  base.py  compare_agent.py  general_agent.py  intent_agent.py  orchestrator.py  price_agent.py  recommend_agent.py  search_agent.py  supervisor_agent.py  synthesis_agent.py  trend_agent.py
services/multi-agents/src/config/: __init__.py  manager.py  models.py  repository.py  settings.py
services/multi-agents/src/conversation/: __init__.py  langgraph_engine.py  manager.py  models.py  pronoun_resolver.py  query_rewriter.py  repository.py
services/multi-agents/src/dag/: __init__.py  analysis_graph.py  comparison_graph.py  state.py
services/multi-agents/src/llm/: __init__.py  base.py  manager.py  ollama_provider.py  openai_provider.py
services/multi-agents/src/middleware/: __init__.py  correlation.py  error_handler.py  rate_limit.py
services/multi-agents/src/migrations/: 001_config_tables.sql
services/multi-agents/src/models/: __init__.py  execution.py  intent.py
services/multi-agents/src/routers/: __init__.py  config_router.py
services/multi-agents/src/search/: __init__.py  base.py  clients.py  query_analyzer.py  registry.py
services/multi-agents/src/search/strategies/: __init__.py
services/multi-agents/src/search/strategies/hybrid/: __init__.py  adaptive.py  keyword_priority.py
services/multi-agents/src/search/strategies/keyword/: __init__.py  basic.py  brand_model_priority.py
services/multi-agents/src/tools/: __init__.py  aggregation_tools.py  cache_tools.py  langchain_tools.py  postgres_tools.py  search_tools.py
services/multi-agents/src/workflows/: __init__.py  compound_workflow.py  conversation_workflow.py  langgraph_conversation_workflow.py  simple_workflow.py
services/ollama-service/: Dockerfile  pyproject.toml
services/ollama-service/src/: __init__.py  config.py  main.py
services/ollama-service/src/api/: __init__.py  routes.py  schemas.py
services/ollama-service/src/services/: __init__.py  completion.py  embedding.py  model_manager.py
(+46 files in other folders)
