[project]
name = "data-pipeline"
version = "0.1.0"
description = "Data ingestion pipeline for Product Intelligence System"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "tenacity>=8.2.0",
    "pandas>=2.1.0",
    "pyarrow>=14.0.0",
    "numpy>=1.26.0",
    "aiofiles>=23.2.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "fake-useragent>=1.4.0",
    "asyncpg>=0.29.0",
    "qdrant-client>=1.7.0",
    "elasticsearch[async]>=8.12.0",
    "redis>=5.0.0",
    "tqdm>=4.66.0",
    "click>=8.1.0",
    # RAGAS evaluation framework
    "ragas>=0.4.0",
    "datasets>=2.14.0",
    "langchain-core>=0.3.0",
    "langchain-ollama>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[project.scripts]
run-pipeline = "scripts.run_pipeline:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
