[project]
name = "multi-agent"
version = "0.1.0"
description = "Multi-agent orchestration service for Product Intelligence System"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "structlog>=24.1.0",
    "langchain>=1.2.4",
    "langchain-community>=0.3.0",
    "langgraph>=1.0.5",
    "llama-index>=0.14.8",
    "redis>=7.1.0",
    "asyncpg>=0.29.0",
    "elasticsearch>=8.0.0",
    "qdrant-client>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
